@startuml

entity DimBlock {
   **SurrogateKey: int** <<PK>>
   --
   TimestampKey: int <<FK>>
   BlockHash: varbinary(1)
   GasLimit: bigint
   GasUsed: bigint
   TransactionCount: bigint
   BaseFeePerGas: bigint
}
entity DimTimestamp {
   **SurrogateKey: int** <<PK>>
   --
   UnixTimestamp: bigint
   HH: int
   MM: int
   SS: int
   AM_PM: int
   Day: int
   Week: int
   WeekName: varchar(9)
   Month: int
   MonthName: varchar(9)
   Quarter: int
   Year: int
}
entity DimToken {
   **SurrogateKey: int** <<PK>>
   --
   Address: varbinary(1)
   Symbol: varchar(4)
   Name: varchar(50)
   Decimals: bigint
   ERC20: bit
   ERC721: bit
}
entity DimTokenSnapshot {
   **SurrogateKey: int** <<PK>>
   --
   TokenKey: int <<FK>>
   TotalSupply: bigint
}
entity FactBalance {
   **SurrogateKey: int** <<PK>>
   --
   TimestampKey: int <<FK>>
   Address: varbinary(1)
   BalanceETH: bigint
}
entity FactTransaction {
   **SurrogateKey: int** <<PK>>
   --
   BlockKey: int <<FK>>
   TokenKey: int <<FK>>
   TimestampKey: int <<FK>>
   TransactionHash: binary(1)
   FromAddress: varbinary(1)
   ToAddress: varbinary(1)
   ValueETH: bigint
   GasUsed: bigint
   GasPrice: bigint
   GasPaid: bigint
   TransactionType: int
}

DimBlock          }o..||  DimTimestamp     : "TimestampKey: SurrogateKey"
DimTokenSnapshot  }o..||  DimToken         : "TokenKey: SurrogateKey"
FactBalance       }o..||  DimTimestamp     : "TimestampKey: SurrogateKey"
FactTransaction   }o..||  DimBlock         : "BlockKey: SurrogateKey"
FactTransaction   }o..||  DimToken         : "TokenKey: SurrogateKey"
FactTransaction   }o..||  DimTimestamp     : "TimestampKey: SurrogateKey"
@enduml
